Update index.html to include more muscularity levels.

--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
 			
 			<label for="muscle">Muscularity:</label>
 			<select id="muscle">
-				<option value="0">Untrained</option>
-				<option value="0.08">Slightly muscular</option>
+				<option value="-0.04">Sedentary</option>
+				<option value="0.0">Non-sedentary</option>
+				<option value="0.04">Fit</option>
+				<option value="0.08">Moderately muscular</option>
 				<option value="0.12">Muscular</option>
 				<option value="0.16">Highly muscular</option>
 			</select>
@@ -293,3 +295,4 @@
 	</script>
 </body>
 </html>
+
