Added heights up to 8 feet tall

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	<h1>YOUR Ideal Weight Calculator</h1>
 		<div class="container">
 			<label for="height">Height (cm):</label>
-			<input type="number" id="height" min="140" max="200" value="170">
+			<input type="number" id="height" min="122" max="243" value="172">
 
 			<label for="gender">Gender:</label>
 			<select id="gender">
@@ -186,7 +186,6 @@
 			147: { small: [52.9, 55.3], medium: [54.2, 58.8], large: [57.4, 61.5] },
 			148: { small: [53.3, 55.6], medium: [54.6, 59.2], large: [57.8, 62.0] },
 			149: { small: [53.6, 56.3], medium: [54.9, 59.5], large: [58.1, 62.6] },
-			
 			150: { small: [54.0, 56.7], medium: [55.3, 59.9], large: [58.5, 63.1] },
 			151: { small: [54.4, 57.1], medium: [55.7, 60.3], large: [58.9, 63.7] },
 			152: { small: [54.7, 57.4], medium: [56.0, 60.6], large: [59.2, 64.2] },
@@ -238,6 +237,49 @@
 			198: { small: [76.9, 83.7], medium: [81.6, 89.4], large: [86.9, 99.3] },
 			199: { small: [77.7, 84.5], medium: [82.5, 90.4], large: [87.8, 100.4] },
 			200: { small: [78.5, 85.3], medium: [84.4, 91.4], large: [88.8, 101.5] },
+			201: { small: [79.4, 86.2], medium: [85.3, 92.5], large: [89.9, 102.7] },
+			202: { small: [80.3, 87.1], medium: [86.2, 93.6], large: [91.0, 103.9] },
+			203: { small: [81.2, 88.0], medium: [87.1, 94.7], large: [92.1, 105.1] },
+			204: { small: [82.1, 88.9], medium: [88.0, 95.8], large: [93.2, 106.3] },
+			205: { small: [83.0, 89.8], medium: [88.9, 96.9], large: [94.3, 107.5] },
+			206: { small: [83.9, 90.7], medium: [89.8, 98.0], large: [95.4, 108.7] },
+			207: { small: [84.8, 91.6], medium: [90.7, 99.1], large: [96.5, 109.9] },
+			208: { small: [85.7, 92.5], medium: [91.6, 100.2], large: [97.6, 111.1] },
+			209: { small: [86.6, 93.4], medium: [92.5, 101.3], large: [98.7, 112.3] },
+			210: { small: [87.5, 94.3], medium: [93.4, 102.4], large: [99.8, 113.5] },
+			211: { small: [88.4, 95.2], medium: [94.3, 103.5], large: [100.9, 114.7] },
+			212: { small: [89.3, 96.1], medium: [95.2, 104.6], large: [102.0, 115.9] },
+			213: { small: [90.2, 97.0], medium: [96.1, 105.7], large: [103.1, 117.1] },
+			214: { small: [91.1, 97.9], medium: [97.0, 106.8], large: [104.2, 118.3] },
+			215: { small: [92.0, 98.8], medium: [97.9, 107.9], large: [105.3, 119.5] },
+			216: { small: [93.1, 99.9], medium: [99.0, 109.1], large: [106.5, 120.8] },
+			217: { small: [94.2, 101.0], medium: [100.1, 110.3], large: [107.7, 122.0] },
+			218: { small: [95.3, 102.1], medium: [101.2, 111.5], large: [108.9, 123.2] },
+			219: { small: [96.4, 103.2], medium: [102.3, 112.7], large: [110.1, 124.5] },
+			220: { small: [97.5, 104.3], medium: [103.4, 113.9], large: [111.3, 125.8] },
+			221: { small: [98.6, 105.4], medium: [104.5, 115.1], large: [112.5, 127.0] },
+			222: { small: [99.7, 106.5], medium: [105.6, 116.3], large: [113.7, 128.2] },
+			223: { small: [100.8, 107.6], medium: [106.7, 117.5], large: [114.9, 129.4] },
+			224: { small: [101.9, 108.7], medium: [107.8, 118.7], large: [116.1, 130.7] },
+			225: { small: [103.0, 109.8], medium: [108.9, 119.9], large: [117.3, 131.9] },
+			226: { small: [104.2, 111.0], medium: [110.1, 121.2], large: [118.6, 133.3] },
+			227: { small: [105.4, 112.2], medium: [111.3, 122.5], large: [119.9, 134.7] },
+			228: { small: [106.6, 113.4], medium: [112.5, 123.8], large: [121.2, 136.1] },
+			229: { small: [107.8, 114.6], medium: [113.7, 125.1], large: [122.5, 137.5] },
+			230: { small: [109.0, 115.8], medium: [114.9, 126.4], large: [123.8, 138.9] },
+			231: { small: [110.2, 117.0], medium: [116.1, 127.7], large: [125.1, 140.3] },
+			232: { small: [111.4, 118.2], medium: [117.3, 129.0], large: [126.4, 141.7] },
+			233: { small: [112.6, 119.4], medium: [118.5, 130.3], large: [127.7, 143.1] },
+			234: { small: [113.8, 120.6], medium: [119.7, 131.6], large: [129.0, 144.5] },
+			235: { small: [115.0, 121.8], medium: [120.9, 132.9], large: [130.3, 145.9] },
+			236: { small: [116.2, 123.0], medium: [122.2, 134.2], large: [131.7, 147.5] },
+			237: { small: [117.4, 124.2], medium: [123.5, 135.5], large: [133.1, 149.1] },
+			238: { small: [118.6, 125.4], medium: [124.8, 136.8], large: [134.5, 150.7] },
+			239: { small: [119.8, 126.6], medium: [126.1, 138.1], large: [135.9, 152.3] },
+			240: { small: [121.0, 127.8], medium: [127.4, 139.4], large: [137.3, 153.9] },
+			241: { small: [122.2, 129.0], medium: [128.7, 140.7], large: [138.7, 155.5] },
+			242: { small: [123.3, 130.2], medium: [130.0, 142.0], large: [140.1, 157.1] },
+			243: { small: [124.5, 131.4], medium: [131.3, 143.3], large: [141.5, 158.7] },
 		};
 
 		const femaleBaseWeights = {
@@ -309,6 +351,59 @@
 			188: { small: [66.2, 71.9], medium: [70.6, 76.9], large: [75.1, 84.8] },
 			189: { small: [66.8, 72.5], medium: [71.2, 77.5], large: [75.7, 85.4] },
 			190: { small: [67.5, 73.2], medium: [71.9, 78.2], large: [76.4, 86.0] },
+			191: { small: [68.2, 73.9], medium: [72.6, 78.9], large: [77.1, 86.7] },
+			192: { small: [68.9, 74.6], medium: [73.3, 79.6], large: [77.8, 87.4] },
+			193: { small: [69.6, 75.3], medium: [74.0, 80.3], large: [78.5, 88.1] },
+			194: { small: [70.3, 76.0], medium: [74.7, 81.0], large: [79.2, 88.8] },
+			195: { small: [71.0, 76.7], medium: [75.4, 81.7], large: [79.9, 89.5] },
+			196: { small: [71.7, 77.4], medium: [76.1, 82.4], large: [80.6, 90.2] },
+			197: { small: [72.4, 78.1], medium: [76.8, 83.1], large: [81.3, 90.9] },
+			198: { small: [73.1, 78.8], medium: [77.5, 83.8], large: [82.0, 91.6] },
+			199: { small: [73.8, 79.5], medium: [78.2, 84.5], large: [82.7, 92.3] },
+			200: { small: [74.5, 80.2], medium: [78.9, 85.2], large: [83.4, 93.0] },
+			201: { small: [75.3, 81.0], medium: [79.7, 86.0], large: [84.3, 93.9] },
+			202: { small: [76.1, 81.8], medium: [80.5, 86.8], large: [85.2, 94.8] },
+			203: { small: [76.9, 82.6], medium: [81.3, 87.6], large: [86.1, 95.7] },
+			204: { small: [77.7, 83.4], medium: [82.1, 88.4], large: [87.0, 96.6] },
+			205: { small: [78.5, 84.2], medium: [82.9, 89.2], large: [87.9, 97.5] },
+			206: { small: [79.3, 85.0], medium: [83.7, 90.0], large: [88.8, 98.4] },
+			207: { small: [80.1, 85.8], medium: [84.5, 90.8], large: [89.7, 99.3] },
+			208: { small: [80.9, 86.6], medium: [85.3, 91.6], large: [90.6, 100.2] },
+			209: { small: [81.7, 87.4], medium: [86.1, 92.4], large: [91.5, 101.1] },
+			210: { small: [82.5, 88.2], medium: [86.9, 93.2], large: [92.4, 102.0] },
+			211: { small: [83.3, 89.0], medium: [87.7, 94.0], large: [93.3, 102.9] },
+			212: { small: [84.1, 89.8], medium: [88.5, 94.8], large: [94.2, 103.8] },
+			213: { small: [84.9, 90.6], medium: [89.3, 95.6], large: [95.1, 104.7] },
+			214: { small: [85.7, 91.4], medium: [90.1, 96.4], large: [96.0, 105.6] },
+			215: { small: [86.5, 92.2], medium: [90.9, 97.2], large: [96.9, 106.5] },
+			216: { small: [87.4, 93.1], medium: [91.8, 98.2], large: [97.9, 107.6] },
+			217: { small: [88.3, 94.0], medium: [92.7, 99.2], large: [98.9, 108.7] },
+			218: { small: [89.2, 94.9], medium: [93.6, 100.2], large: [99.9, 109.8] },
+			219: { small: [90.1, 95.8], medium: [94.5, 101.2], large: [100.9, 110.9] },
+			220: { small: [91.0, 96.7], medium: [95.4, 102.2], large: [101.9, 112.0] },
+			221: { small: [91.9, 97.6], medium: [96.3, 103.2], large: [102.9, 113.1] },
+			222: { small: [92.8, 98.5], medium: [97.2, 104.2], large: [103.9, 114.2] },
+			223: { small: [93.7, 99.4], medium: [98.1, 105.2], large: [104.9, 115.3] },
+			224: { small: [94.6, 100.3], medium: [99.0, 106.2], large: [105.9, 116.4] },
+			225: { small: [95.5, 101.2], medium: [99.9, 107.2], large: [106.9, 117.5] },
+			226: { small: [96.5, 102.3], medium: [100.9, 108.4], large: [108.0, 118.8] },
+			227: { small: [97.5, 103.4], medium: [101.9, 109.6], large: [109.0, 120.0] },
+			228: { small: [98.5, 104.5], medium: [102.9, 110.7], large: [110.1, 121.3] },
+			229: { small: [99.5, 105.6], medium: [103.9, 111.9], large: [111.2, 122.5] },
+			230: { small: [100.5, 106.7], medium: [104.9, 113.0], large: [112.3, 123.8] },
+			231: { small: [101.5, 107.8], medium: [105.9, 114.2], large: [113.3, 125.0] },
+			232: { small: [102.5, 108.9], medium: [106.9, 115.3], large: [114.4, 126.3] },
+			233: { small: [103.5, 110.0], medium: [107.9, 116.5], large: [115.5, 127.5] },
+			234: { small: [104.5, 111.1], medium: [108.9, 117.6], large: [116.5, 128.8] },
+			235: { small: [105.5, 112.2], medium: [109.9, 118.8], large: [117.6, 130.0] },
+			236: { small: [106.6, 113.4], medium: [111.0, 120.0], large: [118.8, 131.4] },
+			237: { small: [107.7, 114.5], medium: [112.2, 121.3], large: [120.0, 132.8] },
+			238: { small: [108.8, 115.6], medium: [113.4, 122.6], large: [121.1, 134.2] },
+			239: { small: [109.9, 116.8], medium: [114.5, 123.8], large: [122.3, 135.6] },
+			240: { small: [111.0, 118.0], medium: [115.7, 125.1], large: [123.4, 137.0] },
+			241: { small: [112.1, 119.1], medium: [116.8, 126.3], large: [124.6, 138.4] },
+			242: { small: [113.2, 120.3], medium: [118.0, 127.6], large: [125.7, 139.8] },
+			243: { small: [114.3, 121.4], medium: [119.1, 128.8], large: [126.9, 141.2] },
 		};
 
 		const muscleSelect = document.getElementById('muscle');
@@ -366,4 +461,5 @@
 	</script>
 </body>
 </html>
+
 
