Race vs Ethnicity

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				<option value="0.16">Highly muscular</option>
 			</select>
 
-			<label for="ethnicity">Ethnicity:</label>
+			<label for="ethnicity">Race:</label>
 			<select id="ethnicity">
 				<option value="0">White/Mixed</option>
 				<option value="-0.05">Asian</option>
@@ -565,6 +565,7 @@
 	</script>
 </body>
 </html>
+
 
 
 
