--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			<select id="muscle">
 				<option value="-0.04">Untrained</option>
 				<option value="0.0">Fit</option>
-				<option value="0.04">Athletic</option>
+				<option value="0.04">Moderately muscular</option>
 				<option value="0.08">Muscular</option>
 				<option value="0.12">Highly muscular</option>
 			</select>
@@ -187,8 +187,8 @@
 			<span class="tooltip">❔<img src="ape_index.png" alt="ape index guide img" ></span></label>
 			<select id="ape">
 				<option value="0">less than 5cm</option>
-				<option value="0.015">+5-12cm</option>
-				<option value="0.03">+12cm</option>
+				<option value="0.01">+5-12cm</option>
+				<option value="0.02">+12cm</option>
 			</select>
 
 			<button onclick="calculateWeight()">Calculate</button>
@@ -208,85 +208,85 @@
 		});
 		
 		const maleBaseWeights = {
-				122: [44.0, 49.5],
-				123: [44.4, 50.0],
-				124: [44.7, 50.3],
-				125: [45.1, 50.7],
-				126: [45.4, 51.1],
-				127: [45.8, 51.5],
-				128: [46.1, 51.9],
-				129: [46.5, 52.3],
-				130: [46.9, 52.8],
-				131: [47.2, 53.1],
-				132: [47.6, 53.6],
-				133: [47.9, 53.9],
-				134: [48.3, 54.4],
-				135: [48.6, 54.7],
-				136: [49.0, 55.1],
-				137: [49.4, 55.6],
-				138: [49.7, 55.9],
-				139: [50.1, 56.4],
-				140: [50.4, 56.7],
-				141: [50.8, 57.2],
-				142: [51.1, 57.5],
-				143: [51.5, 57.9],
-				144: [51.9, 58.4],
-				145: [52.2, 58.7],
-				146: [52.6, 59.2],
-				147: [52.9, 59.5],
-				148: [53.3, 60.0],
-				149: [53.6, 60.3],
-				150: [54.0, 60.8],
-				151: [54.4, 61.2],
-				152: [54.8, 61.5],
-				153: [55.3, 62.2],
-				154: [55.7, 62.6],
-				155: [56.2, 63.2],
-				156: [56.7, 63.8],
-				157: [57.2, 64.5],
-				158: [57.7, 64.9],
-				159: [58.2, 65.5],
-				160: [58.7, 66.0],
-				161: [59.3, 66.8],
-				162: [60.0, 67.5],
-				163: [60.7, 68.3],
-				164: [61.3, 69.0],
-				165: [62.0, 69.8],
-				166: [62.7, 70.5],
-				167: [63.3, 71.3],
-				168: [64.0, 72.0],
-				169: [64.7, 72.8],
-				170: [65.3, 73.5],
-				171: [66.0, 74.3],
-				172: [66.7, 75.0],
-				173: [67.3, 75.8],
-				174: [68.0, 76.5],
-				175: [68.7, 77.3],
-				176: [69.3, 78.0],
-				177: [70.0, 78.8],
-				178: [70.7, 79.5],
-				179: [71.3, 80.3],
-			  	180: [72.0, 81.0],
-				181: [73.0, 82.1],
-				182: [74.0, 83.3],
-				183: [75.0, 84.4],
-				184: [76.0, 85.5],
-				185: [77.0, 86.6],
-				186: [78.0, 87.8],
-				187: [79.0, 88.9],
-				188: [80.0, 90.0],
-				189: [81.0, 91.1],
-				190: [82.0, 92.3],
-				191: [83.1, 93.5],
-				192: [84.2, 94.7],
-				193: [85.3, 96.0],
-				194: [86.4, 97.2],
-				195: [87.5, 98.4],
-				196: [88.6, 99.7],
-				197: [89.7, 100.9],
-				198: [90.8, 102.2],
-				199: [91.9, 103.4],
-				200: [93.0, 104.6],
+				122: [34.5, 38.8],
+123: [35.0, 39.4],
+124: [35.5, 39.9],
+125: [36.0, 40.5],
+126: [36.5, 41.1],
+127: [37.0, 41.6],
+128: [37.5, 42.2],
+129: [38.0, 42.8],
+130: [38.5, 43.3],
+131: [39.1, 44.0],
+132: [39.7, 44.7],
+133: [40.3, 45.3],
+134: [40.9, 46.0],
+135: [41.5, 46.7],
+136: [42.1, 47.4],
+137: [42.7, 48.0],
+138: [43.3, 48.7],
+139: [43.9, 49.4],
+140: [44.5, 50.1],
+141: [45.1, 50.7],
+142: [45.7, 51.4],
+143: [46.3, 52.2],
+144: [46.9, 52.8],
+145: [47.5, 53.4],
+146: [48.2, 54.2],
+147: [48.9, 55.0],
+148: [49.6, 55.8],
+149: [50.3, 56.6],
+150: [51.0, 57.4],
+151: [51.7, 58.2],
+152: [52.4, 59.0],
+153: [53.1, 59.7],
+154: [53.8, 60.5],
+155: [54.5, 61.3],
+156: [55.2, 62.1],
+157: [55.9, 62.9],
+158: [56.6, 63.7],
+159: [57.3, 64.5],
+160: [58.0, 65.3],
+161: [58.7, 66.1],
+162: [59.4, 67.0],
+163: [60.1, 67.6],
+164: [60.8, 68.4],
+165: [61.5, 69.2],
+166: [62.2, 70.0],
+167: [62.9, 70.8],
+168: [63.6, 71.6],
+169: [64.3, 72.5],
+170: [65.0, 73.1],
+171: [65.7, 73.9],
+172: [66.4, 74.7],
+173: [67.1, 75.5],
+174: [67.8, 76.3],
+175: [68.5, 77.1],
+176: [69.2, 77.9],
+177: [69.9, 78.7],
+178: [70.6, 79.4],
+179: [71.3, 80.2],
+180: [72.0, 81.0],
+181: [72.8, 81.9],
+182: [73.6, 82.8],
+183: [74.4, 83.7],
+184: [75.2, 84.6],
+185: [76.0, 85.5],
+186: [77.0, 86.6],
+187: [78.0, 87.8],
+188: [79.0, 88.9],
+189: [80.0, 90.0],
+190: [81.2, 91.4],
+191: [82.4, 92.7],
+192: [83.6, 94.1],
+193: [84.8, 95.4],
+194: [86.0, 96.8],
+195: [87.2, 98.1],
+196: [88.4, 99.5],
+197: [89.6, 100.8],
+198: [90.8, 102.2],
+199: [92.0, 103.5],
+200: [93.1, 104.7],
 				201: [94.1, 105.9],
 				202: [95.2, 107.1],
 				203: [96.3, 108.4],
@@ -537,8 +537,8 @@
 			return;
 		}
 
-		// If the user is "Athletic" or more muscular, ignore ethnicity
-		if (muscle >= 0.08) {
+		// If the user is muscular, ignore ethnicity
+		if (muscle >= 0.04) {
 			ethnicity = 0;
 		}
 
