--- a/index.html
+++ b/index.html
@@ -208,64 +208,64 @@
 		});
 		
 		const maleBaseWeights = {
-				122: [34.5, 38.8],
-123: [35.0, 39.4],
-124: [35.5, 39.9],
-125: [36.0, 40.5],
-126: [36.5, 41.1],
-127: [37.0, 41.6],
-128: [37.5, 42.2],
-129: [38.0, 42.8],
-130: [38.5, 43.3],
-131: [39.1, 44.0],
-132: [39.7, 44.7],
-133: [40.3, 45.3],
-134: [40.9, 46.0],
-135: [41.5, 46.7],
-136: [42.1, 47.4],
-137: [42.7, 48.0],
-138: [43.3, 48.7],
-139: [43.9, 49.4],
-140: [44.5, 50.1],
-141: [45.1, 50.7],
-142: [45.7, 51.4],
-143: [46.3, 52.2],
-144: [46.9, 52.8],
-145: [47.5, 53.4],
-146: [48.2, 54.2],
-147: [48.9, 55.0],
-148: [49.6, 55.8],
-149: [50.3, 56.6],
-150: [51.0, 57.4],
-151: [51.7, 58.2],
-152: [52.4, 59.0],
-153: [53.1, 59.7],
-154: [53.8, 60.5],
-155: [54.5, 61.3],
-156: [55.2, 62.1],
-157: [55.9, 62.9],
-158: [56.6, 63.7],
-159: [57.3, 64.5],
-160: [58.0, 65.3],
-161: [58.7, 66.1],
-162: [59.4, 67.0],
-163: [60.1, 67.6],
-164: [60.8, 68.4],
-165: [61.5, 69.2],
-166: [62.2, 70.0],
-167: [62.9, 70.8],
-168: [63.6, 71.6],
-169: [64.3, 72.5],
-170: [65.0, 73.1],
-171: [65.7, 73.9],
-172: [66.4, 74.7],
-173: [67.1, 75.5],
-174: [67.8, 76.3],
-175: [68.5, 77.1],
-176: [69.2, 77.9],
-177: [69.9, 78.7],
-178: [70.6, 79.4],
-179: [71.3, 80.2],
+				122: [29.5, 33.2],
+123: [30.0, 33.8],
+124: [30.5, 34.3],
+125: [31.0, 34.9],
+126: [31.5, 35.4],
+127: [32.0, 36.0],
+128: [32.5, 36.6],
+129: [33.0, 37.1],
+130: [33.6, 37.8],
+131: [34.2, 38.5],
+132: [34.8, 39.2],
+133: [35.4, 39.8],
+134: [36.0, 40.5],
+135: [36.7, 41.3],
+136: [37.4, 42.1],
+137: [38.1, 42.6],
+138: [38.8, 43.7],
+139: [39.5, 44.4],
+140: [40.2, 45.2],
+141: [41.0, 46.1],
+142: [41.8, 47.0],
+143: [42.6, 47.9],
+144: [43.4, 48.8],
+145: [44.2, 49.7],
+146: [45.0, 50.6],
+147: [45.8, 51.5],
+148: [46.6, 52.4],
+149: [47.4, 53.3],
+150: [48.2, 54.2],
+151: [49.0, 55.1],
+152: [49.8, 56.0],
+153: [50.6, 56.9],
+154: [51.4, 57.8],
+155: [52.2, 58.7],
+156: [53.0, 59.6],
+157: [53.8, 60.5],
+158: [54.6, 61.5],
+159: [55.4, 62.3],
+160: [56.2, 63.2],
+161: [57.0, 64.1],
+162: [57.8, 65.0],
+163: [58.6, 65.9],
+164: [59.4, 66.8],
+165: [60.2, 67.7],
+166: [61.0, 68.6],
+167: [61.8, 69.5],
+168: [62.6, 70.4],
+169: [63.4, 71.3],
+170: [64.2, 72.2],
+171: [65.0, 73.1],
+172: [65.8, 74.0],
+173: [66.4, 74.7],
+174: [67.2, 75.6],
+175: [68.0, 76.5],
+176: [68.8, 77.4],
+177: [69.6, 78.3],
+178: [70.4, 79.2],
+179: [71.2, 80.1],
 180: [72.0, 81.0],
 181: [72.8, 81.9],
 182: [73.6, 82.8],
@@ -334,127 +334,127 @@
 
 
 		const femaleBaseWeights = {
-			  	122: [30.0, 35.1],
-123: [30.5, 35.7],
-124: [31.0, 36.3],
-125: [31.5, 36.9],
-126: [32.0, 37.5],
-127: [32.6, 38.2],
-128: [33.2, 38.9],
-129: [33.8, 39.6],
-130: [34.4, 40.3],
-131: [35.0, 41.0],
-132: [35.6, 41.7],
-133: [36.2, 42.4],
-134: [36.8, 43.1],
-135: [37.4, 43.8],
-136: [38.0, 44.5],
-137: [38.6, 45.2],
-138: [39.2, 45.9],
-139: [39.8, 46.6],
-140: [40.4, 47.3],
-141: [41.0, 48.0],
-142: [41.7, 48.8],
-143: [42.4, 49.6],
-144: [43.1, 50.5],
-145: [43.8, 51.3],
-146: [44.5, 52.1],
-147: [45.2, 52.9],
-148: [45.9, 53.8],
-149: [46.6, 54.6],
-150: [47.3, 55.4],
-151: [48.0, 56.2],
-152: [48.7, 57.1],
-153: [49.4, 57.9],
-154: [50.0, 58.6],
-155: [50.7, 59.4],
-				156: [51.4, 60.2],
-				157: [52.1, 61.0],
-				158: [52.8, 61.8],
-				159: [53.5, 62.7],
-				160: [54.2, 63.5],
-				161: [54.9, 64.3],
-				162: [55.6, 65.1],
-				163: [56.3, 66.0],
-			  	164: [57.0, 66.8],
-			  	165: [57.6, 67.5],
-				166: [58.3, 68.3],
-				167: [59.0, 69.1],
-				168: [59.7, 70.0],
-				169: [60.4, 70.8],
-				170: [61.1, 71.6],
-				171: [61.8, 72.5],
-				172: [62.5, 73.3],
-				173: [63.2, 74.1],
-				174: [63.9, 75.0],
-				175: [64.6, 75.8],
-				176: [65.3, 76.6],
-				177: [66.0, 77.4],
-				178: [66.7, 78.3],
-				179: [67.4, 79.1],
-				180: [68.1, 79.9],
-				181: [69.0, 80.8],
-				182: [70.0, 82.0],
-				183: [71.0, 83.2],
-				185: [72.0, 84.3],
-				186: [73.0, 85.5],
-				187: [74.0, 86.7],
-				188: [75.0, 87.9],
-				189: [76.0, 89.1],
-			  	190: [77.0, 90.2],
-			  	191: [77.1, 90.4],
-				192: [78.2, 91.6],
-				193: [79.2, 92.9],
-				194: [80.3, 94.1],
-				195: [81.4, 95.4],
-				196: [82.5, 96.6],
-				197: [83.5, 97.9],
-				198: [84.6, 99.1],
-				199: [85.7, 100.4],
-				200: [86.7, 101.6],
-				201: [87.8, 102.9],
-				202: [88.9, 104.1],
-				203: [90.0, 105.4],
-				204: [91.0, 106.6],
-				205: [92.1, 107.9],
-				206: [93.2, 109.2],
-				207: [94.2, 110.4],
-				208: [95.3, 111.7],
-				209: [96.4, 112.9],
-				210: [97.4, 114.2],
-				211: [98.5, 115.4],
-				212: [99.6, 116.7],
-				213: [100.6, 117.9],
-				214: [101.7, 119.2],
-				215: [102.8, 120.4],
-				216: [103.9, 121.7],
-				217: [105.0, 122.9],
-				218: [106.0, 124.2],
-				219: [107.1, 125.4],
-				220: [108.1, 126.7],
-				221: [109.2, 127.9],
-				222: [110.3, 129.2],
-				223: [111.3, 130.4],
-				224: [112.4, 131.7],
-				225: [113.5, 132.9],
-				226: [114.6, 134.2],
-				227: [115.6, 135.5],
-				228: [116.7, 136.7],
-				229: [117.8, 138.0],
-				230: [118.8, 139.2],
-				231: [119.9, 140.5],
-				232: [121.0, 141.7],
-				233: [122.0, 142.9],
-				234: [123.1, 144.2],
-				235: [124.2, 145.5],
-				236: [125.3, 146.7],
-				237: [126.3, 148.0],
-				238: [127.4, 149.2],
-				239: [128.5, 150.5],
-				240: [129.5, 151.7],
-				241: [130.6, 153.0],
-				242: [131.7, 154.2],
-				243: [132.7, 155.5],
+			  	122: [27.0, 31.6],
+123: [27.5, 32.2],
+124: [28.0, 32.8],
+125: [28.5, 33.4],
+126: [29.0, 34.0],
+127: [29.5, 34.5],
+128: [30.0, 35.1],
+129: [31.0, 36.3],
+130: [32.0, 37.5],
+131: [32.5, 38.1],
+132: [33.0, 38.7],
+133: [33.6, 39.4],
+134: [34.2, 40.1],
+135: [34.8, 40.8],
+136: [35.4, 41.4],
+137: [36.0, 42.2],
+138: [36.6, 42.9],
+139: [37.2, 43.6],
+140: [38.8, 45.5],
+141: [39.5, 46.3],
+142: [40.2, 47.1],
+143: [40.9, 47.9],
+144: [41.6, 48.7],
+145: [42.3, 49.5],
+146: [43.0, 50.4],
+147: [43.7, 51.2],
+148: [44.4, 52.0],
+149: [45.1, 52.8],
+150: [45.8, 53.6],
+151: [46.5, 54.5],
+152: [47.2, 55.3],
+153: [47.9, 56.1],
+154: [48.6, 56.9],
+155: [49.3, 57.7],
+156: [50.0, 58.6],
+157: [50.7, 59.4],
+158: [51.4, 60.2],
+159: [52.1, 61.0],
+160: [52.8, 61.8],
+161: [53.5, 62.7],
+162: [54.2, 63.5],
+163: [54.9, 64.3],
+164: [55.6, 65.1],
+165: [56.3, 65.9],
+166: [57.0, 66.8],
+167: [57.8, 67.7],
+168: [58.6, 68.7],
+169: [59.4, 69.6],
+170: [60.2, 70.5],
+171: [61.0, 71.4],
+172: [61.8, 72.4],
+173: [62.6, 73.3],
+174: [63.4, 74.2],
+175: [64.2, 75.1],
+176: [65.0, 76.1],
+177: [65.8, 77.0],
+178: [66.6, 78.0],
+179: [67.4, 78.9],
+180: [68.2, 79.8],
+181: [69.0, 80.8],
+182: [69.8, 81.7],
+183: [70.6, 82.7],
+185: [71.4, 83.6],
+186: [72.2, 84.6],
+187: [73.0, 85.6],
+188: [73.8, 86.6],
+189: [74.6, 87.5],
+190: [75.4, 88.4],
+191: [76.2, 89.3],
+192: [77.0, 90.3],
+193: [77.9, 91.2],
+194: [78.8, 92.3],
+195: [79.7, 93.4],
+196: [80.6, 94.5],
+197: [81.5, 95.6],
+198: [82.5, 96.6],
+199: [83.5, 97.8],
+200: [84.5, 98.9],
+201: [85.5, 100.1],
+202: [86.5, 101.3],
+203: [87.5, 102.5],
+204: [88.5, 103.7],
+205: [89.5, 104.8],
+206: [90.6, 106.0],
+207: [91.7, 107.3],
+208: [92.8, 108.6],
+209: [93.9, 109.9],
+210: [95.0, 111.2],
+211: [96.1, 112.5],
+212: [97.2, 113.8],
+213: [98.3, 115.1],
+214: [99.4, 116.4],
+215: [100.5, 117.7],
+216: [101.6, 119.0],
+217: [102.7, 120.3],
+218: [103.8, 121.6],
+219: [104.9, 122.9],
+220: [106.0, 124.2],
+221: [107.1, 125.5],
+222: [108.2, 126.8],
+223: [109.3, 128.1],
+224: [110.4, 129.4],
+225: [111.5, 130.7],
+226: [112.6, 132.0],
+227: [113.7, 133.3],
+228: [114.8, 134.6],
+229: [115.9, 135.9],
+230: [117.0, 137.1],
+231: [118.1, 138.4],
+232: [119.2, 139.6],
+233: [120.3, 140.9],
+234: [121.4, 142.1],
+235: [122.5, 143.4],
+236: [123.6, 144.7],
+237: [124.7, 146.0],
+238: [125.8, 147.3],
+239: [126.9, 148.6],
+240: [128.0, 149.9],
+241: [129.1, 151.2],
+242: [130.2, 152.5],
+243: [131.3, 153.8],
 			};
 
 
@@ -548,7 +548,23 @@
 		let maxWeight = base[1];
 let totalMultiplier = 1;
 
-if (height < 165)
+if (height < 137)
+{
+totalMultiplier = 1 + muscle + torso * 2 + ape + ethnicity + frame;
+}
+else if (height < 147)
+{
+totalMultiplier = 1 + muscle + torso * 1.8 + ape + ethnicity + frame;
+}
+else if (height < 153)
+{
+totalMultiplier = 1 + muscle + torso * 1.6 + ape + ethnicity + frame;
+}
+else if (height < 160)
+{
+totalMultiplier = 1 + muscle + torso * 1.4 + ape + ethnicity + frame;
+}
+else if (height < 165)
 {
 totalMultiplier = 1 + muscle + torso * 1.2 + ape + ethnicity + frame;
 }
