Adjusted tables, added more formulas for certain heights

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			<small id="ethnicity-note" style="color:#666; font-size: 13px;"></small>
 			
 			<label for="frame">Frame Size: 
-			<span class="tooltip">❔<img src="frame_size_guide.png" alt="frame size guide img"></span></label>
+			<!--<span class="tooltip">❔<img src="frame_size_guide.png" alt="frame size guide img"></span></label>-->
 			<select id="frame">
 				<option value="0">Medium</option>
 				<option value="-0.05">Small</option>
@@ -176,7 +176,7 @@
 			</select>
 
 			<label for="torso">Torso Length: 
-			<span class="tooltip">❔<img src="torso_guide.png" alt="torso length guide img" ></span></label>
+			<!--<span class="tooltip">❔<img src="torso_guide.png" alt="torso length guide img" ></span></label>-->
 			<select id="torso">
 				<option value="0">Medium</option>
 				<option value="-0.05">Short</option>
@@ -184,7 +184,7 @@
 			</select>
 
 			<label for="ape">Ape Index: 
-			<span class="tooltip">❔<img src="ape_index.png" alt="ape index guide img" ></span></label>
+			<!--<span class="tooltip">❔<img src="ape_index.png" alt="ape index guide img" ></span></label>-->
 			<select id="ape">
 				<option value="0">less than 5cm</option>
 				<option value="0.01">+5-12cm</option>
@@ -209,252 +209,253 @@
 		
 		const maleBaseWeights = {
 				122: [29.5, 33.2],
-123: [30.0, 33.8],
-124: [30.5, 34.3],
-125: [31.0, 34.9],
-126: [31.5, 35.4],
-127: [32.0, 36.0],
-128: [32.5, 36.6],
-129: [33.0, 37.1],
-130: [33.6, 37.8],
-131: [34.2, 38.5],
-132: [34.8, 39.2],
-133: [35.4, 39.8],
-134: [36.0, 40.5],
-135: [36.7, 41.3],
-136: [37.4, 42.1],
-137: [38.1, 42.6],
-138: [38.8, 43.7],
-139: [39.5, 44.4],
-140: [40.2, 45.2],
-141: [41.0, 46.1],
-142: [41.8, 47.0],
-143: [42.6, 47.9],
-144: [43.4, 48.8],
-145: [44.2, 49.7],
-146: [45.0, 50.6],
-147: [45.8, 51.5],
-148: [46.6, 52.4],
-149: [47.4, 53.3],
-150: [48.2, 54.2],
-151: [49.0, 55.1],
-152: [49.8, 56.0],
-153: [50.6, 56.9],
-154: [51.4, 57.8],
-155: [52.2, 58.7],
-156: [53.0, 59.6],
-157: [53.8, 60.5],
-158: [54.6, 61.5],
-159: [55.4, 62.3],
-160: [56.2, 63.2],
-161: [57.0, 64.1],
-162: [57.8, 65.0],
-163: [58.6, 65.9],
-164: [59.4, 66.8],
-165: [60.2, 67.7],
-166: [61.0, 68.6],
-167: [61.8, 69.5],
-168: [62.6, 70.4],
-169: [63.4, 71.3],
-170: [64.2, 72.2],
-171: [65.0, 73.1],
-172: [65.8, 74.0],
-173: [66.4, 74.7],
-174: [67.2, 75.6],
-175: [68.0, 76.5],
-176: [68.8, 77.4],
-177: [69.6, 78.3],
-178: [70.4, 79.2],
-179: [71.2, 80.1],
-180: [72.0, 81.0],
-181: [72.8, 81.9],
-182: [73.6, 82.8],
-183: [74.4, 83.7],
-184: [75.2, 84.6],
-185: [76.0, 85.5],
-186: [77.0, 86.6],
-187: [78.0, 87.8],
-188: [79.0, 88.9],
-189: [80.0, 90.0],
-190: [81.2, 91.4],
-191: [82.4, 92.7],
-192: [83.6, 94.1],
-193: [84.8, 95.4],
-194: [86.0, 96.8],
-195: [87.2, 98.1],
-196: [88.4, 99.5],
-197: [89.6, 100.8],
-198: [90.8, 102.2],
-199: [92.0, 103.5],
-200: [93.1, 104.7],
-				201: [94.1, 105.9],
-				202: [95.2, 107.1],
-				203: [96.3, 108.4],
-				204: [97.4, 109.6],
-				205: [98.5, 110.8],
-				206: [99.6, 112.1],
-				207: [100.7, 113.3],
-				208: [101.8, 114.5],
-				209: [102.9, 115.8],
-				210: [104.0, 117.0],
-				211: [105.1, 118.2],
-				212: [106.2, 119.5],
-				213: [107.3, 120.7],
-				214: [108.4, 122.0],
-				215: [109.5, 123.2],
-				216: [110.6, 124.4],
-				217: [111.7, 125.7],
-				218: [112.8, 126.9],
-				219: [113.9, 128.1],
-				220: [115.0, 129.4],
-				221: [116.1, 130.6],
-				222: [117.2, 131.9],
-				223: [118.3, 133.1],
-				224: [119.4, 134.4],
-				225: [120.5, 135.6],
-				226: [121.6, 136.8],
-				227: [122.7, 138.1],
-				228: [123.8, 139.3],
-				229: [124.9, 140.5],
-				230: [126.0, 141.8],
-				231: [127.1, 143.0],
-				232: [128.2, 144.2],
-				233: [129.3, 145.5],
-				234: [130.4, 146.7],
-				235: [131.5, 147.9],
-				236: [132.6, 149.2],
-				237: [133.7, 150.4],
-				238: [134.8, 151.7],
-				239: [135.9, 152.9],
-				240: [137.0, 154.1],
-				241: [138.1, 155.4],
-				242: [139.2, 156.6],
-				243: [140.3, 157.8],
+				123: [30.0, 33.8],
+				124: [30.5, 34.3],
+				125: [31.0, 34.9],
+				126: [31.5, 35.4],
+				127: [32.0, 36.0],
+				128: [32.5, 36.6],
+				129: [33.0, 37.1],
+				130: [33.6, 37.8],
+				131: [34.2, 38.5],
+				132: [34.8, 39.2],
+				133: [35.4, 39.8],
+				134: [36.0, 40.5],
+				135: [36.7, 41.3],
+				136: [37.4, 42.1],
+				137: [38.1, 42.6],
+				138: [38.8, 43.7],
+				139: [39.5, 44.4],
+				140: [40.2, 45.2],
+				141: [41.0, 46.1],
+				142: [41.8, 47.0],
+				143: [42.6, 47.9],
+				144: [43.4, 48.8],
+				145: [44.2, 49.7],
+				146: [45.0, 50.6],
+				147: [45.8, 51.5],
+				148: [46.6, 52.4],
+				149: [47.4, 53.3],
+				150: [48.2, 54.2],
+				151: [49.0, 55.1],
+				152: [49.8, 56.0],
+				153: [50.6, 56.9],
+				154: [51.4, 57.8],
+				155: [52.2, 58.7],
+				156: [53.0, 59.6],
+				157: [53.8, 60.5],
+				158: [54.6, 61.5],
+				159: [55.4, 62.3],
+				160: [56.2, 63.2],
+				161: [57.0, 64.1],
+				162: [57.8, 65.0],
+				163: [58.6, 65.9],
+				164: [59.4, 66.8],
+				165: [60.2, 67.7],
+				166: [61.0, 68.6],
+				167: [61.8, 69.5],
+				168: [62.6, 70.4],
+				169: [63.4, 71.3],
+				170: [64.2, 72.2],
+				171: [65.0, 73.1],
+				172: [65.8, 74.0],
+				173: [66.4, 74.7],
+				174: [67.2, 75.6],
+				175: [68.0, 76.5],
+				176: [68.8, 77.4],
+				177: [69.6, 78.3],
+				178: [70.4, 79.2],
+				179: [71.2, 80.1],
+				180: [72.0, 81.0],
+				181: [72.8, 81.9],
+				182: [73.6, 82.8],
+				183: [74.4, 83.7],
+				184: [75.2, 84.6],
+				185: [76.0, 85.5],
+				186: [76.8, 86.4],
+				187: [77.6, 87.3],
+				188: [78.4, 88.2],
+				189: [79.2, 89.1],
+				190: [80.0, 90.0],
+				191: [81.0, 91.1],
+				192: [81.9, 92.1],
+				193: [82.8, 93.1],
+				194: [83.7, 94.2],
+				195: [84.6, 95.2],
+				196: [85.5, 96.2],
+				197: [86.4, 97.2],
+				198: [87.2, 98.1],
+				199: [88.0, 99.0],
+				200: [89.0, 100.1],
+				201: [90.0, 101.3],
+				202: [91.1, 102.5],
+				203: [92.2, 103.7],
+				204: [93.3, 104.9],
+				205: [94.4, 106.2],
+				206: [95.5, 107.4],
+				207: [96.6, 108.7],
+				208: [97.7, 110.1],
+				209: [98.8, 111.2],
+				210: [99.9, 112.4],
+				211: [101.0, 113.6],
+				212: [102.2, 114.9],
+				213: [103.4, 116.3],
+				214: [104.6, 117.7],
+				215: [105.8, 119.0],
+				216: [107.0, 120.4],
+				217: [108.2, 121.9],
+				218: [109.4, 123.1],
+				219: [110.6, 124.4],
+				220: [111.8, 125.8],
+				221: [113.0, 127.1],
+				222: [114.2, 128.5],
+				223: [115.4, 129.8],
+				224: [116.6, 131.2],
+				225: [117.8, 132.5],
+				226: [119.0, 133.9],
+				227: [120.2, 135.2],
+				228: [121.4, 136.6],
+				229: [122.6, 137.9],
+				230: [123.8, 139.3],
+				231: [124.0, 139.5],
+				232: [125.2, 140.9],
+				233: [126.4, 142.2],
+				234: [127.6, 143.6],
+				235: [128.8, 145.0],
+				236: [130.0, 146.3],
+				237: [131.2, 147.6],
+				238: [132.4, 148.9],
+				239: [133.6, 150.3],
+				240: [134.8, 151.7],
+				241: [136.0, 153.0],
+				242: [137.2, 154.4],
+				243: [138.4, 155.7],
+
 			};
 
 
 		const femaleBaseWeights = {
 			  	122: [27.0, 31.6],
-123: [27.5, 32.2],
-124: [28.0, 32.8],
-125: [28.5, 33.4],
-126: [29.0, 34.0],
-127: [29.5, 34.5],
-128: [30.0, 35.1],
-129: [31.0, 36.3],
-130: [32.0, 37.5],
-131: [32.5, 38.1],
-132: [33.0, 38.7],
-133: [33.6, 39.4],
-134: [34.2, 40.1],
-135: [34.8, 40.8],
-136: [35.4, 41.4],
-137: [36.0, 42.2],
-138: [36.6, 42.9],
-139: [37.2, 43.6],
-140: [38.8, 45.5],
-141: [39.5, 46.3],
-142: [40.2, 47.1],
-143: [40.9, 47.9],
-144: [41.6, 48.7],
-145: [42.3, 49.5],
-146: [43.0, 50.4],
-147: [43.7, 51.2],
-148: [44.4, 52.0],
-149: [45.1, 52.8],
-150: [45.8, 53.6],
-151: [46.5, 54.5],
-152: [47.2, 55.3],
-153: [47.9, 56.1],
-154: [48.6, 56.9],
-155: [49.3, 57.7],
-156: [50.0, 58.6],
-157: [50.7, 59.4],
-158: [51.4, 60.2],
-159: [52.1, 61.0],
-160: [52.8, 61.8],
-161: [53.5, 62.7],
-162: [54.2, 63.5],
-163: [54.9, 64.3],
-164: [55.6, 65.1],
-165: [56.3, 65.9],
-166: [57.0, 66.8],
-167: [57.8, 67.7],
-168: [58.6, 68.7],
-169: [59.4, 69.6],
-170: [60.2, 70.5],
-171: [61.0, 71.4],
-172: [61.8, 72.4],
-173: [62.6, 73.3],
-174: [63.4, 74.2],
-175: [64.2, 75.1],
-176: [65.0, 76.1],
-177: [65.8, 77.0],
-178: [66.6, 78.0],
-179: [67.4, 78.9],
-180: [68.2, 79.8],
-181: [69.0, 80.8],
-182: [69.8, 81.7],
-183: [70.6, 82.7],
-185: [71.4, 83.6],
-186: [72.2, 84.6],
-187: [73.0, 85.6],
-188: [73.8, 86.6],
-189: [74.6, 87.5],
-190: [75.4, 88.4],
-191: [76.2, 89.3],
-192: [77.0, 90.3],
-193: [77.9, 91.2],
-194: [78.8, 92.3],
-195: [79.7, 93.4],
-196: [80.6, 94.5],
-197: [81.5, 95.6],
-198: [82.5, 96.6],
-199: [83.5, 97.8],
-200: [84.5, 98.9],
-201: [85.5, 100.1],
-202: [86.5, 101.3],
-203: [87.5, 102.5],
-204: [88.5, 103.7],
-205: [89.5, 104.8],
-206: [90.6, 106.0],
-207: [91.7, 107.3],
-208: [92.8, 108.6],
-209: [93.9, 109.9],
-210: [95.0, 111.2],
-211: [96.1, 112.5],
-212: [97.2, 113.8],
-213: [98.3, 115.1],
-214: [99.4, 116.4],
-215: [100.5, 117.7],
-216: [101.6, 119.0],
-217: [102.7, 120.3],
-218: [103.8, 121.6],
-219: [104.9, 122.9],
-220: [106.0, 124.2],
-221: [107.1, 125.5],
-222: [108.2, 126.8],
-223: [109.3, 128.1],
-224: [110.4, 129.4],
-225: [111.5, 130.7],
-226: [112.6, 132.0],
-227: [113.7, 133.3],
-228: [114.8, 134.6],
-229: [115.9, 135.9],
-230: [117.0, 137.1],
-231: [118.1, 138.4],
-232: [119.2, 139.6],
-233: [120.3, 140.9],
-234: [121.4, 142.1],
-235: [122.5, 143.4],
-236: [123.6, 144.7],
-237: [124.7, 146.0],
-238: [125.8, 147.3],
-239: [126.9, 148.6],
-240: [128.0, 149.9],
-241: [129.1, 151.2],
-242: [130.2, 152.5],
-243: [131.3, 153.8],
+				123: [27.5, 32.2],
+				124: [28.0, 32.8],
+				125: [28.5, 33.4],
+				126: [29.0, 34.0],
+				127: [29.5, 34.5],
+				128: [30.0, 35.1],
+				129: [31.0, 36.3],
+				130: [32.0, 37.5],
+				131: [32.5, 38.1],
+				132: [33.0, 38.7],
+				133: [33.6, 39.4],
+				134: [34.2, 40.1],
+				135: [34.8, 40.8],
+				136: [35.4, 41.4],
+				137: [36.0, 42.2],
+				138: [36.6, 42.9],
+				139: [37.2, 43.6],
+				140: [38.8, 45.5],
+				141: [39.5, 46.3],
+				142: [40.2, 47.1],
+				143: [40.9, 47.9],
+				144: [41.6, 48.7],
+				145: [42.3, 49.5],
+				146: [43.0, 50.4],
+				147: [43.7, 51.2],
+				148: [44.4, 52.0],
+				149: [45.1, 52.8],
+				150: [45.8, 53.6],
+				151: [46.5, 54.5],
+				152: [47.2, 55.3],
+				153: [47.9, 56.1],
+				154: [48.6, 56.9],
+				155: [49.3, 57.7],
+				156: [50.0, 58.6],
+				157: [50.7, 59.4],
+				158: [51.4, 60.2],
+				159: [52.1, 61.0],
+				160: [52.8, 61.8],
+				161: [53.5, 62.7],
+				162: [54.2, 63.5],
+				163: [54.9, 64.3],
+				164: [55.6, 65.1],
+				165: [56.3, 65.9],
+				166: [57.0, 66.8],
+				167: [57.8, 67.7],
+				168: [58.6, 68.7],
+				169: [59.4, 69.6],
+				170: [60.2, 70.5],
+				171: [61.0, 71.4],
+				172: [61.8, 72.4],
+				173: [62.6, 73.3],
+				174: [63.4, 74.2],
+				175: [64.2, 75.1],
+				176: [65.0, 76.1],
+				177: [65.8, 77.0],
+				178: [66.6, 78.0],
+				179: [67.4, 78.9],
+				180: [68.2, 79.8],
+				181: [69.0, 80.8],
+				182: [69.8, 81.7],
+				183: [70.6, 82.7],
+				185: [71.4, 83.6],
+				186: [72.2, 84.6],
+				187: [73.0, 85.6],
+				188: [73.8, 86.6],
+				189: [74.6, 87.5],
+				190: [75.4, 88.4],
+				191: [76.2, 89.3],
+				192: [77.0, 90.3],
+				193: [77.9, 91.2],
+				194: [78.8, 92.3],
+				195: [79.7, 93.4],
+				196: [80.6, 94.5],
+				197: [81.5, 95.6],
+				198: [82.5, 96.6],
+				199: [83.5, 97.8],
+				200: [84.5, 98.9],
+				201: [85.5, 100.1],
+				202: [86.5, 101.3],
+				203: [87.5, 102.5],
+				204: [88.5, 103.7],
+				205: [89.5, 104.8],
+				206: [90.6, 106.0],
+				207: [91.7, 107.3],
+				208: [92.8, 108.6],
+				209: [93.9, 109.9],
+				210: [95.0, 111.2],
+				211: [96.1, 112.5],
+				212: [97.2, 113.8],
+				213: [98.3, 115.1],
+				214: [99.4, 116.4],
+				215: [100.5, 117.7],
+				216: [101.6, 119.0],
+				217: [102.7, 120.3],
+				218: [103.8, 121.6],
+				219: [104.9, 122.9],
+				220: [106.0, 124.2],
+				221: [107.1, 125.5],
+				222: [108.2, 126.8],
+				223: [109.3, 128.1],
+				224: [110.4, 129.4],
+				225: [111.5, 130.7],
+				226: [112.6, 132.0],
+				227: [113.7, 133.3],
+				228: [114.8, 134.6],
+				229: [115.9, 135.9],
+				230: [117.0, 137.1],
+				231: [118.1, 138.4],
+				232: [119.2, 139.6],
+				233: [120.3, 140.9],
+				234: [121.4, 142.1],
+				235: [122.5, 143.4],
+				236: [123.6, 144.7],
+				237: [124.7, 146.0],
+				238: [125.8, 147.3],
+				239: [126.9, 148.6],
+				240: [128.0, 149.9],
+				241: [129.1, 151.2],
+				242: [130.2, 152.5],
+				243: [131.3, 153.8],
 			};
 
 
@@ -548,30 +549,75 @@
 		let maxWeight = base[1];
 let totalMultiplier = 1;
 
-if (height < 137)
-{
-totalMultiplier = 1 + muscle + torso * 2 + ape + ethnicity + frame;
-}
-else if (height < 147)
-{
-totalMultiplier = 1 + muscle + torso * 1.8 + ape + ethnicity + frame;
-}
-else if (height < 153)
-{
-totalMultiplier = 1 + muscle + torso * 1.6 + ape + ethnicity + frame;
-}
-else if (height < 160)
-{
-totalMultiplier = 1 + muscle + torso * 1.4 + ape + ethnicity + frame;
-}
-else if (height < 165)
-{
-totalMultiplier = 1 + muscle + torso * 1.2 + ape + ethnicity + frame;
-}
-else
-{
-		totalMultiplier = 1 + muscle + torso + ape + ethnicity + frame;
-}
+		// UGLY, SO BAD
+		if (height < 134)
+		{
+		totalMultiplier = 1 + muscle + torso * 2.04 + ape + ethnicity + frame * 1.2;
+		}
+		else if (height < 137)
+		{
+		totalMultiplier = 1 + muscle + torso * 1.96 + ape + ethnicity + frame * 1.2;
+		}
+		else if (height < 140)
+		{
+		totalMultiplier = 1 + muscle * 0.95 + torso * 1.88 + ape + ethnicity + frame * 1.2;
+		}
+		else if (height < 143)
+		{
+		totalMultiplier = 1 + muscle * 0.9 + torso * 1.8 + ape + ethnicity + frame * 1.1;
+		}
+		else if (height < 146)
+		{
+		totalMultiplier = 1 + muscle * 0.9 + torso * 1.72 + ape + ethnicity + frame * 1.1;
+		}
+		else if (height < 149)
+		{
+		totalMultiplier = 1 + muscle * 0.85 + torso * 1.64 + ape + ethnicity + frame * 1.1;
+		}
+		else if (height < 152)
+		{
+		totalMultiplier = 1 + muscle * 0.85 + torso * 1.56 + ape + ethnicity + frame * 1.1;
+		}
+		else if (height < 155)
+		{
+		totalMultiplier = 1 + muscle * 0.85 + torso * 1.48 + ape + ethnicity + frame * 1.1;
+		}
+		else if (height < 158)
+		{
+		totalMultiplier = 1 + muscle * 0.9 + torso * 1.4 + ape + ethnicity + frame;
+		}
+		else if (height < 161)
+		{
+		totalMultiplier = 1 + muscle * 0.9 + torso * 1.32 + ape + ethnicity + frame;
+		}
+		else if (height < 164)
+		{
+		totalMultiplier = 1 + muscle * 0.95 + torso * 1.24 + ape + ethnicity + frame;
+		} 
+		else if (height < 167)
+		{
+		totalMultiplier = 1 + muscle * 0.95 + torso * 1.16 + ape + ethnicity + frame;
+		}
+		else if (height < 170)
+		{
+		totalMultiplier = 1 + muscle * 0.95 + torso * 1.08 + ape + ethnicity + frame;
+		}
+		else if ( height > 214 )
+		{
+			totalMultiplier = 1 + muscle + torso + ape + ethnicity + frame * 1.1;
+		}
+		else if ( height > 190 )
+		{
+			totalMultiplier = 1 + muscle + torso + ape + ethnicity + frame * 1.2;
+		}
+		else if ( height > 180 )
+		{
+			totalMultiplier = 1 + muscle + torso + ape + ethnicity + frame * 1.1;
+		}
+		else
+		{
+				totalMultiplier = 1 + muscle + torso + ape + ethnicity + frame;
+		}
 
 		minWeight *= totalMultiplier;
 		maxWeight *= totalMultiplier;
@@ -591,3 +637,4 @@ else
 	</script>
 </body>
 </html>
+
