--- a/index.html
+++ b/index.html
@@ -604,15 +604,15 @@ let totalMultiplier = 1;
 		}
 		else if ( height > 214 )
 		{
-			totalMultiplier = 1 + muscle + torso + ape + ethnicity * 0.333 + frame * 1.1;
+			totalMultiplier = 1 + muscle + torso * 0.4 + ape + ethnicity * 0.333 + frame * 0.6;
 		}
 		else if ( height > 190 )
 		{
-			totalMultiplier = 1 + muscle + torso + ape + ethnicity * 0.5 + frame * 1.2;
+			totalMultiplier = 1 + muscle + torso * 0.6 + ape + ethnicity * 0.5 + frame * 0.8;
 		}
 		else if ( height > 180 )
 		{
-			totalMultiplier = 1 + muscle + torso + ape + ethnicity * 0.667 + frame * 1.1;
+			totalMultiplier = 1 + muscle + torso * 0.8 + ape + ethnicity * 0.667 + frame;
 		}
 		else
 		{
@@ -637,5 +637,6 @@ let totalMultiplier = 1;
 	</script>
 </body>
 </html>
+
 
 
