--- a/index.html
+++ b/index.html
@@ -208,25 +208,25 @@
 		});
 		
 		const maleBaseWeights = {
-   103: [22.9, 25.8],
-104: [23.3, 26.2],
-105: [23.7, 26.7],
-106: [24.1, 27.1],
-107: [24.5, 27.6],
-108: [24.9, 28.0],
-109: [25.3, 28.5],
-110: [25.7, 28.9],
-111: [26.1, 29.4],
-112: [26.5, 29.8],
-113: [26.9, 30.3],
-114: [26.3, 29.6],
-115: [26.7, 30.0],
-116: [27.1, 30.5],
-117: [27.5, 30.9],
-118: [27.9, 31.4],
-119: [28.3, 31.8],
-120: [28.7, 32.3],
-121: [29.1, 32.7],
+				103: [22.9, 25.8],
+				104: [23.3, 26.2],
+				105: [23.7, 26.7],
+				106: [24.1, 27.1],
+				107: [24.5, 27.6],
+				108: [24.9, 28.0],
+				109: [25.3, 28.5],
+				110: [25.7, 28.9],
+				111: [26.1, 29.4],
+				112: [26.5, 29.8],
+				113: [26.9, 30.3],
+				114: [26.3, 29.6],
+				115: [26.7, 30.0],
+				116: [27.1, 30.5],
+				117: [27.5, 30.9],
+				118: [27.9, 31.4],
+				119: [28.3, 31.8],
+				120: [28.7, 32.3],
+				121: [29.1, 32.7],
 				122: [29.5, 33.2],
 				123: [30.0, 33.8],
 				124: [30.5, 34.3],
@@ -296,82 +296,82 @@
 				188: [78.4, 88.2],
 				189: [79.2, 89.1],
 				190: [80.0, 90.0],
-				  191: [80.9, 91.0],
-192: [81.8, 92.0],
-193: [82.7, 93.0],
-194: [83.6, 94.1],
-195: [84.5, 95.1],
-196: [85.4, 96.1],
-197: [86.3, 97.1],
-198: [87.2, 98.1],
-199: [88.1, 99.1],
-200: [89.0, 100.1],
-201: [90.0, 101.3],
-202: [91.0, 102.4],
-203: [92.0, 103.5],
-204: [93.0, 104.6],
-205: [94.0, 105.8],
-206: [95.0, 106.9],
-207: [96.0, 108.0],
-208: [97.0, 109.1],
-209: [98.0, 110.3],
-210: [99.0, 111.4],
-211: [100.0, 112.5],
-212: [101.0, 113.6],
-213: [102.0, 114.8],
-214: [103.0, 115.9],
-215: [104.0, 117.0],
-216: [105.1, 118.2],
-217: [106.2, 119.5],
-218: [107.3, 120.7],
-219: [108.4, 121.9],
-220: [109.5, 123.2],
-221: [110.6, 124.4],
-222: [111.7, 125.6],
-223: [112.8, 126.9],
-224: [113.9, 128.1],
-225: [115.0, 129.4],
-226: [116.2, 130.7],
-227: [117.4, 132.1],
-228: [118.6, 133.4],
-229: [119.8, 134.8],
-230: [121.0, 136.1],
-231: [122.15, 137.4],
-232: [123.3, 138.7],
-233: [124.45, 140.0],
-234: [125.6, 141.3],
-235: [126.75, 142.6],
-236: [127.9, 143.9],
-237: [129.05, 145.2],
-238: [130.3, 146.6],
-239: [131.5, 147.9],
-240: [132.7, 149.3],
-241: [133.9, 150.6],
-242: [135.1, 152.0],
-243: [136.3, 153.3],
+				191: [80.9, 91.0],
+				192: [81.8, 92.0],
+				193: [82.7, 93.0],
+				194: [83.6, 94.1],
+				195: [84.5, 95.1],
+				196: [85.4, 96.1],
+				197: [86.3, 97.1],
+				198: [87.2, 98.1],
+				199: [88.1, 99.1],
+				200: [89.0, 100.1],
+				201: [90.0, 101.3],
+				202: [91.0, 102.4],
+				203: [92.0, 103.5],
+				204: [93.0, 104.6],
+				205: [94.0, 105.8],
+				206: [95.0, 106.9],
+				207: [96.0, 108.0],
+				208: [97.0, 109.1],
+				209: [98.0, 110.3],
+				210: [99.0, 111.4],
+				211: [100.0, 112.5],
+				212: [101.0, 113.6],
+				213: [102.0, 114.8],
+				214: [103.0, 115.9],
+				215: [104.0, 117.0],
+				216: [105.1, 118.2],
+				217: [106.2, 119.5],
+				218: [107.3, 120.7],
+				219: [108.4, 121.9],
+				220: [109.5, 123.2],
+				221: [110.6, 124.4],
+				222: [111.7, 125.6],
+				223: [112.8, 126.9],
+				224: [113.9, 128.1],
+				225: [115.0, 129.4],
+				226: [116.2, 130.7],
+				227: [117.4, 132.1],
+				228: [118.6, 133.4],
+				229: [119.8, 134.8],
+				230: [121.0, 136.1],
+				231: [122.15, 137.4],
+				232: [123.3, 138.7],
+				233: [124.45, 140.0],
+				234: [125.6, 141.3],
+				235: [126.75, 142.6],
+				236: [127.9, 143.9],
+				237: [129.05, 145.2],
+				238: [130.3, 146.6],
+				239: [131.5, 147.9],
+				240: [132.7, 149.3],
+				241: [133.9, 150.6],
+				242: [135.1, 152.0],
+				243: [136.3, 153.3],
 			};
 
 
 		const femaleBaseWeights = {
-103: [20.5, 24.0],
-104: [20.8, 24.4],
-105: [21.1, 24.7],
-106: [21.4, 25.1],
-107: [21.7, 25.4],
-108: [22.0, 25.8],
-109: [22.3, 26.1],
-110: [22.6, 26.5],
-111: [22.9, 26.8],
-112: [23.2, 27.2],
-113: [23.5, 27.5],
-114: [23.8, 27.9],
-115: [24.2, 28.4],
-116: [24.6, 28.8],
-117: [25.0, 29.3],
-118: [25.4, 29.8],
-119: [25.8, 30.2],
-120: [26.2, 30.7],
-121: [26.6, 31.2],
+				103: [20.5, 24.0],
+				104: [20.8, 24.4],
+				105: [21.1, 24.7],
+				106: [21.4, 25.1],
+				107: [21.7, 25.4],
+				108: [22.0, 25.8],
+				109: [22.3, 26.1],
+				110: [22.6, 26.5],
+				111: [22.9, 26.8],
+				112: [23.2, 27.2],
+				113: [23.5, 27.5],
+				114: [23.8, 27.9],
+				115: [24.2, 28.4],
+				116: [24.6, 28.8],
+				117: [25.0, 29.3],
+				118: [25.4, 29.8],
+				119: [25.8, 30.2],
+				120: [26.2, 30.7],
+				121: [26.6, 31.2],
 			  	122: [27.0, 31.6],
 				123: [27.5, 32.2],
 				124: [28.0, 32.8],
@@ -447,52 +447,52 @@
 				195: [79.7, 93.4],
 				196: [80.6, 94.5],
 				197: [81.5, 95.4],
-198: [82.4, 96.5],
-199: [83.3, 97.6],
-200: [84.2, 98.6],
-201: [85.1, 99.7],
-202: [86.0, 100.8],
-203: [87.0, 102.0],
-204: [88.0, 103.1],
-205: [89.0, 104.2],
-206: [90.0, 105.4],
-207: [91.0, 106.6],
-208: [92.0, 107.7],
-209: [93.0, 108.9],
-210: [94.0, 110.0],
-211: [95.1, 111.4],
-212: [96.2, 112.7],
-213: [97.3, 114.0],
-214: [98.4, 115.3],
-215: [99.5, 116.6],
-216: [100.6, 117.9],
-217: [101.7, 119.2],
-218: [102.8, 120.5],
-219: [103.9, 121.8],
-220: [105.0, 123.0],
-221: [106.1, 124.3],
-222: [107.2, 125.6],
-223: [108.3, 126.9],
-224: [109.4, 128.2],
-225: [110.5, 129.5],
-226: [111.6, 130.8],
-227: [112.7, 132.1],
-228: [113.8, 133.4],
-229: [114.9, 134.7],
-230: [116.0, 136.0],
-231: [117.1, 137.3],
-232: [118.2, 138.6],
-233: [119.3, 139.9],
-234: [120.4, 141.2],
-235: [121.5, 142.5],
-236: [122.6, 143.8],
-237: [123.7, 145.0],
-238: [124.8, 146.3],
-239: [125.9, 147.6],
-240: [127.0, 148.9],
-241: [128.1, 150.2],
-242: [129.2, 151.5],
-243: [130.3, 152.7],
+				198: [82.4, 96.5],
+				199: [83.3, 97.6],
+				200: [84.2, 98.6],
+				201: [85.1, 99.7],
+				202: [86.0, 100.8],
+				203: [87.0, 102.0],
+				204: [88.0, 103.1],
+				205: [89.0, 104.2],
+				206: [90.0, 105.4],
+				207: [91.0, 106.6],
+				208: [92.0, 107.7],
+				209: [93.0, 108.9],
+				210: [94.0, 110.0],
+				211: [95.1, 111.4],
+				212: [96.2, 112.7],
+				213: [97.3, 114.0],
+				214: [98.4, 115.3],
+				215: [99.5, 116.6],
+				216: [100.6, 117.9],
+				217: [101.7, 119.2],
+				218: [102.8, 120.5],
+				219: [103.9, 121.8],
+				220: [105.0, 123.0],
+				221: [106.1, 124.3],
+				222: [107.2, 125.6],
+				223: [108.3, 126.9],
+				224: [109.4, 128.2],
+				225: [110.5, 129.5],
+				226: [111.6, 130.8],
+				227: [112.7, 132.1],
+				228: [113.8, 133.4],
+				229: [114.9, 134.7],
+				230: [116.0, 136.0],
+				231: [117.1, 137.3],
+				232: [118.2, 138.6],
+				233: [119.3, 139.9],
+				234: [120.4, 141.2],
+				235: [121.5, 142.5],
+				236: [122.6, 143.8],
+				237: [123.7, 145.0],
+				238: [124.8, 146.3],
+				239: [125.9, 147.6],
+				240: [127.0, 148.9],
+				241: [128.1, 150.2],
+				242: [129.2, 151.5],
+				243: [130.3, 152.7],
 			};
 
 
@@ -576,7 +576,7 @@
 		}
 
 		// If the user is muscular, ignore ethnicity
-		if (muscle >= 0.04) {
+		if (muscle > 0) {
 			ethnicity = 0;
 		}
 
@@ -586,21 +586,29 @@
 		let maxWeight = base[1];
 
 
-// Large frame low muscle situation.
-if (frame > 0)
-{
-  if (muscle < 0)
-  {
-    muscle = -0.08
-  }
-  else if (muscle == 0)
-  {
-    muscle = -0.02
-  }
-}
+		// Large frame low muscle situation.
+		if (frame > 0)
+		{
+		  if (muscle < 0)
+		  {
+		    muscle = -0.08
+		  }
+		  else if (muscle == 0)
+		  {
+		    muscle = -0.02
+		  }
+		}
 
-
-let totalMultiplier = 1;
+		if (torso < 0 && muscle >= 0)
+		{
+			muscle *= 1.02
+		}
+		else if (torso < 0 && muscle < 0)
+		{
+			muscle /= 1.02
+		}
+			
+		let totalMultiplier = 1;
 
 		// Ugly height based formulas
 		if (height < 134)
@@ -690,6 +698,7 @@ let totalMultiplier = 1;
 	</script>
 </body>
 </html>
+
 
 
 
